opens java.base/java.lang for java 16+ to workaround CI failed jobs in java 17